--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
 }
 
 .grid-container {
+  font-size: 50px;
   margin: auto;
+  height: 50%;
   width: 50%;
   border-radius: 5px;
   display: grid;
@@ -117,14 +119,13 @@ body {
 }
 
 .display--content {
-  font-size: 120px;
+  font-size: 2.5em;
   padding-left: 5px;
   margin: 0;
 }
 
 button {
   border: 0.1px solid whitesmoke;
-  font-size: 70px;
   padding: 5px 20px;
   margin: 0;
   cursor: pointer;
