--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 body {
@@ -9,7 +7,6 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
   background-color: #ffffff;
 }
 
@@ -103,6 +100,7 @@ body {
 }
 
 .display {
+  height: 100px;
   background-color: mintcream;
   border: 4px solid lightskyblue;
   border-radius: 3px;
@@ -119,15 +117,13 @@ body {
 }
 
 .display--content {
-  font-size: 2.5em;
+  font-size: 2em;
   padding-left: 5px;
   margin: 0;
 }
 
 button {
   border: 0.1px solid whitesmoke;
-  padding: 5px 20px;
-  margin: 0;
   cursor: pointer;
 }
 
