--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
 }
 
 .display {
-  height: 100px;
+  height: 100%;
   background-color: mintcream;
   border: 4px solid lightskyblue;
   border-radius: 3px;
@@ -171,3 +171,9 @@ button {
 .num:hover {
   background-color: #d6d5d5;
 }
+
+@media (max-height: 800px) {
+  .display {
+    height: 100px;
+  }
+} ;
