--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ body {
 }
 
 .grid-container {
-  font-size: 50px;
+  font-size: 3rem;
   margin: auto;
   height: 60%;
-  width: 30%;
+  width: 50%;
   border-radius: 5px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -103,21 +103,14 @@ body {
   height: 100%;
   background-color: mintcream;
   border: 4px solid lightskyblue;
-  border-radius: 3px;
-  margin-bottom: 10px;
-  margin: 0;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
 }
 
 .display--content {
-  font-size: 2em;
+  font-size: 5rem;
   padding-left: 5px;
   margin: 0;
 }
@@ -180,6 +173,6 @@ button {
 
 @media (max-width: 900px) {
   .grid-container {
-    width: 90%;
+    width: 60%;
   }
 }
